--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "firebase": "^9.22.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tui-pagination": "^3.4.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
